<preference-headers xmlns:android="http://schemas.android.com/apk/res/android">

    <!-- These settings headers are only used on tablets. -->

    <header
        android:fragment="com.jing.app.jjgallery.gdb.view.settings.SettingsActivity$SafetyPreferenceFragment"
        android:icon="@drawable/ic_fingerprint_black_36dp"
        android:title="@string/pref_header_safety" />

    <header
        android:fragment="com.jing.app.jjgallery.gdb.view.settings.SettingsActivity$GeneralPreferenceFragment"
        android:icon="@drawable/ic_home_black_36dp"
        android:title="@string/pref_header_general" />

    <header
        android:fragment="com.jing.app.jjgallery.gdb.view.settings.SettingsActivity$HttpPreferenceFragment"
        android:icon="@drawable/ic_http_black_36dp"
        android:title="@string/setting_http_title" />

    <header
        android:fragment="com.jing.app.jjgallery.gdb.view.settings.SettingsActivity$GdbPreferenceFragment"
        android:icon="@drawable/ic_account_circle_black_36dp"
        android:title="@string/setting_gdb_title" />

</preference-headers>
